--- a/templates/writers.html
+++ b/templates/writers.html
@@ -10,7 +10,7 @@
         <div class="row g-0">
             <div class="col-md-4">
                 <img class="card-img" src="{{ url_for('static', filename= writer[0]) }}"
-                    alt="Card image">
+                    alt="Card image" style="height: 250px; width: 200px; object-fit: cover;">
             </div>
             <div class="col-md-8 p-3">
                 <div class="card-body">
